--- a/styles.css
+++ b/styles.css
@@ -89,10 +89,11 @@ code {
     word-break: normal;
     word-wrap: normal;
     line-height: 2;
-    background-color: #f7f7f7;
+    background-color: #212532;
     padding: 15px;
     margin: 10px;
     border-radius: 5px;
+    color: aliceblue;
 }
 
 .last-section {
